--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hello-nenad",
-  "version": "2.0.2",
+  "version": "2.0.0-beta.0",
   "description": "Say hello to Nenad",
   "main": "index.js",
   "scripts": {
